-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 14
-
Component/s: hotspot
-
b29
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8236783 | 15 | Markus Grönlund | P2 | Resolved | Fixed | b05 |
Stress test fails with
Unexpected Exception in thread JFR Event Stream 57.
java.lang.InternalError: Missing object id=4371 in pool jdk.types.ClassLoader. All ids should reference object
at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.get(ConstantMap.java:100)
at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap$Reference.resolve(ConstantMap.java:56)
at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.resolve(ConstantMap.java:137)
at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.resolve(ConstantMap.java:143)
at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.get(ConstantMap.java:118)
at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.lambda$resolve$0(ConstantMap.java:151)
at jdk.jfr/jdk.jfr.internal.LongMap.forEachKey(LongMap.java:227)
at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.resolve(ConstantMap.java:151)
at jdk.jfr/jdk.jfr.internal.consumer.ChunkParser.lambda$readStreamingEvent$7(ChunkParser.java:225)
at jdk.jfr/jdk.jfr.internal.LongMap.forEach(LongMap.java:236)
at jdk.jfr/jdk.jfr.internal.consumer.ChunkParser.readStreamingEvent(ChunkParser.java:225)
at jdk.jfr/jdk.jfr.internal.consumer.EventDirectoryStream.processOrdered(EventDirectoryStream.java:171)
at jdk.jfr/jdk.jfr.internal.consumer.EventDirectoryStream.processRecursionSafe(EventDirectoryStream.java:133)
at jdk.jfr/jdk.jfr.internal.consumer.EventDirectoryStream.process(EventDirectoryStream.java:93)
at jdk.jfr/jdk.jfr.internal.consumer.AbstractEventStream.execute(AbstractEventStream.java:241)
at jdk.jfr/jdk.jfr.internal.consumer.AbstractEventStream$1.run(AbstractEventStream.java:263)
at jdk.jfr/jdk.jfr.internal.consumer.AbstractEventStream$1.run(AbstractEventStream.java:260)
at java.base/java.security.AccessController.doPrivileged(AccessController.java:391)
at jdk.jfr/jdk.jfr.internal.consumer.AbstractEventStream.run(AbstractEventStream.java:260)
at jdk.jfr/jdk.jfr.internal.consumer.AbstractEventStream.lambda$startAsync$1(AbstractEventStream.java:212)
at java.base/java.lang.Thread.run(Thread.java:833)
Current thread is 7275
Dumping core ...
Unexpected Exception in thread JFR Event Stream 57.
java.lang.InternalError: Missing object id=4371 in pool jdk.types.ClassLoader. All ids should reference object
at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.get(ConstantMap.java:100)
at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap$Reference.resolve(ConstantMap.java:56)
at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.resolve(ConstantMap.java:137)
at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.resolve(ConstantMap.java:143)
at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.get(ConstantMap.java:118)
at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.lambda$resolve$0(ConstantMap.java:151)
at jdk.jfr/jdk.jfr.internal.LongMap.forEachKey(LongMap.java:227)
at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.resolve(ConstantMap.java:151)
at jdk.jfr/jdk.jfr.internal.consumer.ChunkParser.lambda$readStreamingEvent$7(ChunkParser.java:225)
at jdk.jfr/jdk.jfr.internal.LongMap.forEach(LongMap.java:236)
at jdk.jfr/jdk.jfr.internal.consumer.ChunkParser.readStreamingEvent(ChunkParser.java:225)
at jdk.jfr/jdk.jfr.internal.consumer.EventDirectoryStream.processOrdered(EventDirectoryStream.java:171)
at jdk.jfr/jdk.jfr.internal.consumer.EventDirectoryStream.processRecursionSafe(EventDirectoryStream.java:133)
at jdk.jfr/jdk.jfr.internal.consumer.EventDirectoryStream.process(EventDirectoryStream.java:93)
at jdk.jfr/jdk.jfr.internal.consumer.AbstractEventStream.execute(AbstractEventStream.java:241)
at jdk.jfr/jdk.jfr.internal.consumer.AbstractEventStream$1.run(AbstractEventStream.java:263)
at jdk.jfr/jdk.jfr.internal.consumer.AbstractEventStream$1.run(AbstractEventStream.java:260)
at java.base/java.security.AccessController.doPrivileged(AccessController.java:391)
at jdk.jfr/jdk.jfr.internal.consumer.AbstractEventStream.run(AbstractEventStream.java:260)
at jdk.jfr/jdk.jfr.internal.consumer.AbstractEventStream.lambda$startAsync$1(AbstractEventStream.java:212)
at java.base/java.lang.Thread.run(Thread.java:833)
Current thread is 7275
Dumping core ...
- backported by
-
JDK-8236783 Stress test fails with "Unexpected Exception in thread JFR Event Stream"
-
- Resolved
-
- duplicates
-
JDK-8236534 Dacapo24H.java crash due to "free(): corrupted unsorted chunks"
-
- Closed
-
-
JDK-8235779 jdk/jfr/tool/TestPrintJSON.java fails due missing object id in pool jdk.types.Method
-
- Closed
-
- relates to
-
JDK-8230400 Missing constant pool entry for a method in stacktrace
-
- Resolved
-
-
JDK-8235779 jdk/jfr/tool/TestPrintJSON.java fails due missing object id in pool jdk.types.Method
-
- Closed
-