8234059: Stress test fails with "Unexpected Exception in thread JFR Event Stream"

Reviewed-by: egahlin